--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ django = "^3.0.6"
 daphne = "^2.5.0"
 channels = "^2.4.0"
 channels_redis = "^2.4.2"
+dj-database-url = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 
