--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ channels = "^2.4.0"
 channels_redis = "^2.4.2"
 dj-database-url = "^0.5.0"
 psycopg2-binary = "^2.8.5"
+django_heroku = "^0.3.1"
 
 [tool.poetry.dev-dependencies]
 
